# celeste-image-generation

./: .env.example  .gitignore  CLAUDE.md  README.md  example.py  local_video_example.py  pyproject.toml  video_example.py
Notebooks/: PENNYLANE_Kamil_Data_Factures.xlsx  compta.ipynb
docs/: tasks.md
src/celeste_image_generation/: __init__.py  base.py  mapping.py
src/celeste_image_generation/core/: config.py  enums.py  types.py  utils.py
src/celeste_image_generation/providers/: __init__.py  google.py  huggingface.py  local.py  luma.py  openai.py  replicate.py  stability_ai.py  xai.py
