[project]
name = "celeste-image-generation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.1.0",
    "python-dotenv>=1.1.1",
    "streamlit",
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "Pillow",
    "aiohttp>=3.9.0",
    "ftfy",
    "av",
    "safetensors>=0.4.0",
    "opencv-python",
    "notebook>=7.4.3",
    "sentencepiece",
    "certifi>=2025.6.15",
    "qai-hub>=0.31.0",
    "joblib>=1.5.1",
    "openpyxl>=3.1.5",
    "numba>=0.61.2",
    "matplotlib>=3.10.3",
    "huggingface-hub>=0.33.2",
    "optimum-quanto>=0.2.7",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
