[project]
name = "celeste-image-generation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "google-genai>=0.1.0",
    "Pillow",
    "aiohttp>=3.9.0",
    "sentencepiece",
    "huggingface-hub>=0.33.2",
    "diffusers"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "streamlit",
    "notebook>=7.4.3",
]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }
